# vgm-hoa

./: .dockerignore  .env  .gitignore  CHANGELOG.md  README.md  angular.json  docker-compose-api.yml  docker-compose-fy.yml  jest.config.js  nx.json  package-lock.json  package.json  patch.js  tsconfig.base.json
apps/api/: Dockerfile  README.md  package.json
apps/api/src/: main.ts
apps/api/src/app/: app.controller.ts  app.module.ts  app.service.ts
apps/electron-fy/src/: index.ts  package.json
apps/ionic-fy/: .gitignore  Dockerfile  android-patch.js  capacitor.config.json  extra-webpack.config.js  ionic.config.json  ios-patch.js  ngsw-config.json  package-lock.json  package.json  tauri.key  tauri.key.pub  updater.json  webpack.sw-config.js
apps/ionic-fy-e2e/: cypress.json
apps/ionic-fy-e2e/src/integration/: app.spec.ts
apps/ionic-fy/src/: global.scss  index.html  main.electron.ts  main.ts  manifest.webmanifest  typings.d.ts
apps/ionic-fy/src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
apps/ionic-fy/src-tauri/resources/: config.json
apps/ionic-fy/src-tauri/src/: db.rs  ipfs.rs  main.rs  server.rs  utils.rs
apps/ionic-fy/src/app/: app-routing.module.ts  app.component.html  app.component.ts  app.electron.module.ts  app.guard.ts  app.module.ts
apps/ionic-fy/src/service-worker/: custom.js  service-worker.js  sw.js
apps/ionic-fy/src/theme/: variables.scss
apps/ionic-fy/src/worker/: service-worker.js  shared-worker.js
libs/api-interfaces/src/lib/: api-interfaces.ts
patches/: @angular-devkit+build-angular+0.1101.4.patch  @firebase+util+1.7.3.patch  @firebase+util+1.9.1.patch  @firebase+util+1.9.3.patch  @ionic+core+5.9.4.patch  @ionic-super-tabs+core+7.0.8.patch
(+237 files in other folders)
