[package]
name = "vgm-desktop"
version = "0.1.0"
description = "VGM.TV Desktop App"
authors = ["vgm-developer"]
license = ""
repository = ""
default-run = "vgm-desktop"
edition = "2021"
rust-version = "1.59"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.2.1", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "1.2.1", features = ["api-all", "process-command-api", "updater", "wry"] }
tokio = { version = "1.25.0", features = ["full"] }
reqwest = { version = "0.11.14", features = ["blocking", "json"] }
futures = "0.3.26"
portpicker = "0.1.1"
tauri-plugin-localhost = "0.1.0"
tauri-plugin-window-state = { git = "https://github.com/tauri-apps/plugins-workspace", branch = "dev" }
tauri-plugin-autostart = { git = "https://github.com/tauri-apps/plugins-workspace", branch = "dev" }
lazy_static = "1.4.0"
again = "0.1.2"
hyper = { version = "0.14.24", features = ["full"] }
hyper-reverse-proxy = "0.5.1"
m3u8-rs = "5.0.3"
os_info = "3.7.0"
once_cell = "1.17.1"
io = "0.0.2"
sled = "0.34.7"

[dependencies.fix-path-env]
git = "https://github.com/tauri-apps/fix-path-env-rs"
branch = "release"

[features]
# by default Tauri runs in production mode
# when `tauri dev` runs it is executed with `cargo run --no-default-features` if `devPath` is an URL
default = ["custom-protocol"]
# this feature is used for production builds where `devPath` points to the filesystem
# DO NOT remove this
custom-protocol = ["tauri/custom-protocol"]
